--- a/config/onlinesim_config.json
+++ b/config/onlinesim_config.json
@@ -1,6 +1,6 @@
 {
     "countries": [
-      "russia",      "britain",      "austria",      "spain",      "georgia",      "cyprus",      "portugal",
+      "russia",      "united_kingdom",      "austria",      "spain",      "georgia",      "cyprus",      "portugal",
       "sweden",      "denmark",      "estonia",      "latvia",      "lithuania",      "poland",      "france",
       "romania",      "ireland",      "ukraine",      "kazakhstan",      "finland",      "belgium",      "norway",
       "germany",      "netherlands",      "italy",      "czech",      "moldova",      "bulgaria",      "croatia",
