--- a/config/main_config.json
+++ b/config/main_config.json
@@ -3,7 +3,7 @@
     "description": "API for fetching and monitoring SMS messages via various services.",
     "version": "0.0.1.3",
     "author": "9733n",
-    "services": ["onlinesim", "textr", "another"],
+    "services": ["onlinesim", "textr"],
     "cache_for_fresh_numbers": ["onlinesim"],
     "exclude_from_cache": ["textr", "another"]
   }
