--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,16 @@
-FROM python:3.12.5-alpine
+FROM python:3.12.6-alpine
 
 ENV PYTHONPATH=/frontend/src
 
 WORKDIR /src
+
+RUN apk add --no-cache \
+    gcc \
+    python3-dev \
+    musl-dev \
+    linux-headers \
+    libffi-dev \
+    build-base
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
@@ -10,4 +18,3 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY ./src /src
 
 CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
-
