--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,12 @@
-FROM python:3.12.6-alpine
+FROM python:3-slim AS build-env
 
 ENV PYTHONPATH=/frontend/src
 
 WORKDIR /src
-
-RUN apk add --no-cache \
-    gcc \
-    python3-dev \
-    musl-dev \
-    linux-headers \
-    libffi-dev \
-    build-base
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./src /src
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "wsgi:app"]
